--- a/Changes
+++ b/Changes
@@ -7,3 +7,6 @@ Revision history for Perl extension Egg::Release.
 0.11  2006/12/12
 	- General opening to the public.
 
+0.12  2006/12/13
+	- The incompleteness of the document and the version mark, etc. was corrected.
+	- The code is not corrected at all.
