--- a/Changes
+++ b/Changes
@@ -10,3 +10,7 @@ Revision history for Perl extension Egg::Release.
 0.12  2006/12/13
 	- The incompleteness of the document and the version mark, etc. was corrected.
 	- The code is not corrected at all.
+
+0.13  2006/12/15
+	- Earliness Egg::Request was made to be done from the plug-in in include.
+
