--- a/Changes
+++ b/Changes
@@ -1,5 +1,17 @@
 Revision history for Perl extension Egg::Release.
 
+0.18  2006/12/19
+	- The output of helper script was STDERR.
+	    Egg::Script ( 0.03 => 0.04 )
+	    Egg::Script::Project ( 0.03 => 0.04 )
+	    Egg::Helper::Script::YAML ( 0.01 => 0.02 )
+	    Egg::Helper::Script::Prototype ( 0.01 => 0.02 )
+	    Egg::Helper::Script::Dispatcher ( 0.01 => 0.02 )
+	    Egg::Helper::Script::Install ( 0.01 => 0.02 )
+	- view->param was a bug in the value setting part of param.
+	    Egg::View ( 0.03 => 0.04 )
+	    Egg::View::Template::Params ( 0.02 => 0.03 )
+
 0.17  2006/12/18
 	- 'create_snip' method is added to Egg::Request.
 	    Egg::Request ( 0.02 => 0.03 )
