--- a/Changes
+++ b/Changes
@@ -1,5 +1,20 @@
 Revision history for Perl extension Egg::Release.
 
+0.20  2006/12/21
+	- The rc file was evaluated by using Egg::Plugin::YAML.
+	    Egg::Plugin::YAML ( 0.01 => 0.02 )
+	- The helper script was rewritten.
+	    Egg::Helper::Script ( 0.02 => 0.03 )
+	    Egg::Helper::Script::Project ( 0.02 => 1.00 )
+	    Egg::Helper::Script::Dispatcher ( 0.02 => 1.00 )
+	    Egg::Helper::Script::Install ( 0.02 => 0.03 )
+
+0.19  2006/12/20
+	- The config method of Egg is slightly corrected.
+	    Egg ( 0.15 => 0.16 )
+	- To Egg::Config with the config method addition, some corrections.
+	    Egg::Config ( 0.01 => 0.02 )
+
 0.18  2006/12/19
 	- The output of helper script was STDERR.
 	    Egg::Script ( 0.03 => 0.04 )
