--- a/Changes
+++ b/Changes
@@ -1,5 +1,16 @@
 Revision history for Perl extension Egg::Release.
 
+0.24  2007/01/04
+	- Bug fix of Res->redirect_page.  # This turned out in the report from kurt.
+	    Egg::Responce ( 0.02 => 0.03 )
+	- The secure flag was hoisted by 'Set cookie' at the https access.
+	  However, it follows it when specified specifying it.
+	    Egg::Responce ( 0.03 => 0.04 )
+
+0.23  2006/12/30
+	- ModPerl::VersionUtil was used to judge the version of mod_perl.
+	    Egg ( 0.16 => 0.17 )
+
 0.22  2006/12/25
 	- Correspondence to thing that Egg::Request->cookie might putout
 	  'Use of uninitialized value ...'.
