--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for Perl extension Egg::Release.
 
+0.26  2007/01/09
+	- The typing error etc. were corrected. # This turned out in the report from kurt.
+	    Egg::Response ( 0.04 => 0.05 )
+	    Egg::Plugin::AfterFinalize ( 0.01 => 0.02 )
+
+0.25  2007/01/06
+	- is_post and is_get were added to Egg::Request.
+	    Egg::Request ( 0.04 => 0.05 )
+
 0.24  2007/01/04
 	- Bug fix of Res->redirect_page.  # This turned out in the report from kurt.
 	    Egg::Responce ( 0.02 => 0.03 )
