--- a/Changes
+++ b/Changes
@@ -1,5 +1,22 @@
 Revision history for Perl extension Egg::Release.
 
+0.37  2007/01/31
+	- The processing when Model and View were set up was mended a little.
+	    Egg ( 0.19 => 0.20 )
+
+0.36  2007/01/31
+	- The methods such as 'uri_escape' and 'uri_unescape' were added.
+	  It and some alias are added.
+	    Egg::Engine ( 0.06 => 0.07 )
+
+0.35  2007/01/28
+	- The processing such as 'secure' that had been done by 'prepare' was individually done.
+	    Egg::Request ( 0.06 => 0.07 )
+
+0.34  2007/01/24
+	- The onload event can have been set to Egg::Response->redirect_page.
+	    Egg::Response ( 0.05 => 0.06 )
+
 0.33  2007/01/21
 	- The processing of MODEL and VIEW was corrected.
 	  As a result, it came to be able to use a lot of VIEW at the same time.
