Import of LUSHE/Egg-Release-1.02 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      1.02
gitpan-cpan-path:         LUSHE/Egg-Release-1.02.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Egg::Release.
 
+1.02  2007/02/19
+	- The croak method was added to Egg.pm.
+	- Egg::Model::DBI was updated.
+	    = If Ima::DBI was able to be used, this was used.
+	      Therefore, I think that the setting of Apache::DBI becomes there is no necessity.
+
 1.01  2007/02/18
 	- Some of the request module were corrected.
 	- Bugfix etc. of some files.
