Import of LUSHE/Egg-Release-1.09 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      1.09
gitpan-cpan-path:         LUSHE/Egg-Release-1.09.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Egg::Release.
 
+1.09  2007/02/24
+	- Egg::Base was added.
+	- Bug fix of some modules and it corrected it.
+
 1.08  2007/02/23
 	- Egg::Plugin::ErrorDocument was added.
 	- Bug fix of some modules and it corrected it.
