--- a/README
+++ b/README
@@ -56,7 +56,7 @@ INSTALLATION
 
 AUTHOR
 
-Masatoshi Mizuno, E<lt>mizunoE<64>bomcity.comE<gt>
+Masatoshi Mizuno, E<lt>lusheE<64>cpan.orgE<gt>
 
 COPYRIGHT AND LICENCE
 
