--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Egg::Release.
 
+1.13  2007/03/01
+	- Bug fix for Egg::Helper::P::Charset
+	- Bug fix for Egg::Plugin::Charset::UTF8
+
 1.12  2007/02/28
 	- fixed for Egg::Response.
 	- fixed for Egg::Engine::V1.
