Import of LUSHE/Egg-Release-1.14 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      1.14
gitpan-cpan-path:         LUSHE/Egg-Release-1.14.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Egg::Release.
 
+1.14  2007/03/04
+	- fixed for Egg::Helper::Project::Build.
+	- fixed for Egg::Dispatch::Runmode.
+
 1.13  2007/03/01
 	- Bug fix for Egg::Helper::P::Charset
 	- Bug fix for Egg::Plugin::Charset::UTF8
