Import of LUSHE/Egg-Release-1.16 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      1.16
gitpan-cpan-path:         LUSHE/Egg-Release-1.16.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Egg::Release.
 
+1.16  2007/03/06
+	- Bug fix for Egg::Debug::Base.
+
 1.15  2007/03/05
 	- The 'uri_to' method is added to Egg::Engine.
 	- The code of 'debug_report' is moved from Egg::Engine to Egg::Debug::Base.
