Import of LUSHE/Egg-Release-1.18 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      1.18
gitpan-cpan-path:         LUSHE/Egg-Release-1.18.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Egg::Release.
 
+1.18  2007/03/15
+	- fixed for Egg::Dispatch::Runmode.
+	  * The value of snip was not done in 'lc'.
+	- Bug fix for Egg::Engine.
+
 1.17  2007/03/07
 	- fixed for Egg::Plugin::Encode;
 	  * The method concerning the UTF8 flag is added.
