Import of LUSHE/Egg-Release-1.19 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      1.19
gitpan-cpan-path:         LUSHE/Egg-Release-1.19.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Egg::Release.
 
+1.19  2007/03/16
+	- Bug fix for Egg.
+
 1.18  2007/03/15
 	- fixed for Egg::Dispatch::Runmode.
 	  * The value of snip was not done in 'lc'.
