Import of LUSHE/Egg-Release-1.20 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      1.20
gitpan-cpan-path:         LUSHE/Egg-Release-1.20.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Egg::Release.
 
+1.20  2007/03/20
+	- Bug fix for Egg::Plugin::ErrorDocument.
+	- fixed for Egg::Helper.
+
 1.19  2007/03/16
 	- Bug fix for Egg.
 
