--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Egg::Release.
 
+1.2001 2007/03/23
+	- fixed for Egg::Engine.
+	- fixed for Egg::Helper::Project::Build.
+	- fixed for Egg.
+
 1.20  2007/03/20
 	- Bug fix for Egg::Plugin::ErrorDocument.
 	- fixed for Egg::Helper.
