--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension .
 
+2.01  2007/05/08
+	- bugfix for Egg::Helper.
+
 2.00  Sat Apr  7 08:29:03 2007
 	- original version; created by Egg::Helper::O::MakeMaker v0.04
 	   with module name Egg::Release
