Import of LUSHE/Egg-Release-2.05 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      2.05
gitpan-cpan-path:         LUSHE/Egg-Release-2.05.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension .
 
+2.05  2007/05/15
+	- bugfix for Egg::Helper::Plugin::YAML.
+
 2.04  2007/05/13
 	- '_import' call is added for Egg.
 	- 'call' method is added for Egg::Plugin::Tools.
