Import of LUSHE/Egg-Release-2.07 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      2.07
gitpan-cpan-path:         LUSHE/Egg-Release-2.07.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension .
 
+2.07  2007/05/18
+	- fixed for Egg::Debugging.
+	- fixed for Egg::Debugging::Report.
+	- fixed for Egg.
+
 2.06  2007/05/17
 	- Egg::Plugin::Request::ServerPoert module is added.
 	- bugfix for Egg::Plugin::DBI::Transaction.
