Import of LUSHE/Egg-Release-2.08 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      2.08
gitpan-cpan-path:         LUSHE/Egg-Release-2.08.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension .
 
+2.08  2007/05/19
+	- fixed for Egg::Plugin::DBI::Easy.
+	- bugfix for Egg::Plugin::Debugging.
+	- bugfix for Egg::Plugin::Debugging::Report.
+
 2.07  2007/05/18
 	- fixed for Egg::Debugging.
 	- fixed for Egg::Debugging::Report.
