Import of LUSHE/Egg-Release-2.11 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      2.11
gitpan-cpan-path:         LUSHE/Egg-Release-2.11.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension .
 
+2.11  2007/05/23
+	- 'ridirect' method is fixed for Egg::Response.
+
 2.10  2007/05/21
 	- 'run_modes' method of Egg::Plugin::Dispatch is changed to 'dispatch_map'.
 	  * 'run_modes' was made the alias to 'dispatch_map'.
