Import of LUSHE/Egg-Release-2.13 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      2.13
gitpan-cpan-path:         LUSHE/Egg-Release-2.13.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension .
 
+2.13  2007/06/15
+	- Some methods are added to Egg::Plugin::Tools.
+	- 'email' filter is added to Egg::Plugin::Filter.
+	- fixed for t/23_plugin_upload.t
+
 2.12  2007/05/28
 	- fixed for Egg::Response::TieCookie.
 	- 'Egg::Plugin::TemplateAuto' is added.
