Import of LUSHE/Egg-Release-2.16 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      2.16
gitpan-cpan-path:         LUSHE/Egg-Release-2.16.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension .
 
+2.16  2007/06/27
+	- fixed for test.
+
 2.14  2007/06/25
 	- 'ridirect' method is fixed for Egg::Response.
 
