--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension .
 
+2.18  2007/08/05
+	- fixed for Egg::Plugin::Filter.
+	- The method of timelocal is added to Egg::Plugin::Tools.
+	- fixed for Egg::Plugin::DBI::Easy;
+	- The method of scalar is added to Egg::Plugin::DBI::Easy::accessors.
+
 2.17  2007/08/03
 	- fixed for Egg::Helper.
 	- HTTP::Headers was not used by Egg::Response.
