Import of LUSHE/Egg-Release-2.21 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      2.21
gitpan-cpan-path:         LUSHE/Egg-Release-2.21.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension .
 
+2.21  2007/08/12
+	- Bug fixed and fixed for Egg::Plugin::DBI::Easy.
+	- Bug fixed for Egg::_dispatch_action.
+
 2.20  2007/08/08
 	- Sending content_length was decided by setting no_content_length_regex in Egg::Response.
 	- The method of no_content_length is added to Egg::Response.
