Import of LUSHE/Egg-Release-2.22 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      2.22
gitpan-cpan-path:         LUSHE/Egg-Release-2.22.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension .
 
+2.22  2007/08/13
+	- The method of noentry_insert is added to Egg::Plugin::DBI::Easy.
+	- Bug fixed for Egg::Plugin::DBI::Easy.
+
 2.21  2007/08/12
 	- Bug fixed and fixed for Egg::Plugin::DBI::Easy.
 	- Bug fixed for Egg::_dispatch_action.
