--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension .
 
+2.23  2007/08/15
+	- The method of prepare_engine is added to Egg.
+	- fixed for Egg::Helper::VirtualTest.
+
 2.22  2007/08/13
 	- The method of noentry_insert is added to Egg::Plugin::DBI::Easy.
 	- Bug fixed for Egg::Plugin::DBI::Easy.
