--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension .
 
+2.26  2007/11/05
+	- fixed for Egg::Helper::Plugin::Maker.
+	- fixed for Egg::Helper::Project::Build.
+
 2.25  2007/11/03
 	- fixed for Egg::Helper::Project::Build.
 
