Import of LUSHE/Egg-Release-3.03 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      3.03
gitpan-cpan-path:         LUSHE/Egg-Release-3.03.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,7 +1,11 @@
 Revision history for Perl extension .
 
+3.03  2008/02/27
+	- fixed for Egg::Manager.
+	- The method of 'config_to' is added to Egg::Base.
+
 3.02  2008/02/27
-	- fixed for Egg::Component.
+	- fixed for Egg::Manager.
 	- fixed for Egg::Base.
 
 3.01  2008/02/18
