Import of LUSHE/Egg-Release-3.05 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      3.05
gitpan-cpan-path:         LUSHE/Egg-Release-3.05.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl extension .
 
+3.05  2008/03/03
+	- bugfix for Egg::Dispatch::Standard.
+	- bugfix for Egg;
+	- fixed  for Egg::Component.
+	- fixed  for Egg::Dispatch::Standard.
+	- fixed  for Egg::Dispatch::Fast.
+
 3.04  2008/02/29
 	- fixed for Egg.
 	- fixed for Egg::Request.
