Import of LUSHE/Egg-Release-3.06 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      3.06
gitpan-cpan-path:         LUSHE/Egg-Release-3.06.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension .
 
+3.06  2008/03/03
+	- bugfix  for Egg.
+	- fixed for Egg::Helper::Build::Project.
+
 3.05  2008/03/03
 	- bugfix for Egg::Dispatch::Standard.
 	- bugfix for Egg;
