Import of LUSHE/Egg-Release-3.07 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      3.07
gitpan-cpan-path:         LUSHE/Egg-Release-3.07.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,12 @@
 Revision history for Perl extension .
 
-3.06  2008/03/03
+3.07  2008/03/05
+	- bugfix for Egg::Dispatch::Standard.
+	- fixed for Egg::Util::Debug.
+	- bugfix for Egg.
+	- bugfix for Egg::Plugin::Response::Redirect.
+
+3.06  2008/03/04
 	- bugfix  for Egg.
 	- fixed for Egg::Helper::Build::Project.
 
