Import of LUSHE/Egg-Release-3.09 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      3.09
gitpan-cpan-path:         LUSHE/Egg-Release-3.09.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension .
 
+3.09  2008/04/17
+	- Build.PL is abolished.
+	- fixed for Egg::Helper::Build::Project.
+	- fixed for Egg::Helper::Build::Module.
+
 3.08  2008/03/30
 	- fixed for Egg::Util::DebugScreen
 	- fixed for Egg.
