Import of LUSHE/Egg-Release-3.11 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      3.11
gitpan-cpan-path:         LUSHE/Egg-Release-3.11.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension .
 
+3.11  2008/05/14
+	- fixed for Egg::Util.
+	- The method of 'cookie_more' is added to Egg::Request.
+
 3.10  2008/05/12
 	- The defective operation when 'P::Encode' and 'P::Request::Upload' are used
 	  at the same time is corrected. for Egg::Plugin::Encode.
