--- a/README
+++ b/README
@@ -60,7 +60,7 @@ Masatoshi Mizuno E<lt>lusheE<64>cpan.orgE<gt>
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2008 by Bee Flag, Corp. E<lt>http://egg.bomcity.com/E<gt>, All Rights Reserved.
+Copyright (C) 2008 by Bee Flag, Corp. E<lt>http://egg.bomcity.com/E<gt>.
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.8.6 or,
