--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl extension .
 
+3.12  2008/05/15
+	- fixed for Egg::Response.
+	- fixed for Egg::Response::TieCookie.
+	- 'referer_check' method of Egg::Plugin::Tools is corrected.
+	- fixed for Egg::Util::DebugScreen.
+	- Some specifications of Egg::Dispatch::Standard are changed.
+
 3.11  2008/05/14
 	- fixed for Egg::Util.
 	- The method of 'cookie_more' is added to Egg::Request.
