Import of LUSHE/Egg-Release-3.13 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      3.13
gitpan-cpan-path:         LUSHE/Egg-Release-3.13.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension .
 
+3.13  2008/05/19
+	- bugfix for Egg::Dispatch::Standard.
+
 3.12  2008/05/15
 	- fixed for Egg::Response.
 	- fixed for Egg::Response::TieCookie.
