Import of LUSHE/Egg-Release-3.14 from CPAN.
gitpan-cpan-distribution: Egg-Release
gitpan-cpan-version:      3.14
gitpan-cpan-path:         LUSHE/Egg-Release-3.14.tar.gz
gitpan-cpan-author:       LUSHE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension .
 
+3.14  2008/05/20
+	- fixed for Egg::Util::DebugScreen.
+	- bugfix for Egg::Dispatch::Standard.
+
 3.13  2008/05/19
 	- bugfix for Egg::Dispatch::Standard.
 
